# Project

./: .coverage  .gitignore  Skypro.txt  pip.txt  requirements.txt
Course_Python/: main.py
Skypro/: pyproject.toml
Skypro/src/: README.md  processing.py  widget.py
Skypro/tests/: test_main.py  test_masks.py  test_processing.py  test_widget.py
src/: .gitignore  masks.py  widget.py
tests/: test_main.py
